💥v2.1.8
优化JavaDoc以类注释优先策略处理